test/spec_vectors/store/fail/module_50.wat
(module (memory 1) (func (i32.store (i32.const 0) (f32.const 0))))